--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ name }}</title>
+    <title>vue demo</title>
   </head>
   <body>
     <div id="app"></div>
