ADD increment and decrement controls, MOVE dist into new folder public, CHANGE server and build destinations

--- a/src/assets/styles/pineapple.scss
+++ b/src/assets/styles/pineapple.scss
@@ -16,8 +16,8 @@
 .st15{fill:#FFFFFF;}
 
 #pineapple {
-    height: 620px;
-    width: 700px;
+    height: auto;
+    width: 100%;
 
     #pineapple-mouth-0,
     #pineapple-mouth-1,
